[gd_scene load_steps=7 format=3 uid="uid://cws2w77pmwm2o"]

[ext_resource type="PackedScene" uid="uid://bweog2mm1a1rd" path="res://scenes/sand_tile_map.tscn" id="1_5ynfr"]
[ext_resource type="Script" path="res://scripts/basic_island_level_1.gd" id="1_jhtna"]
[ext_resource type="PackedScene" uid="uid://cm02t5caihvab" path="res://scenes/captain_cat.tscn" id="2_myd00"]
[ext_resource type="PackedScene" uid="uid://bu22h7d2n2lrq" path="res://scenes/tree_sprite.tscn" id="3_iija3"]
[ext_resource type="PackedScene" uid="uid://l4x4fpu2evjp" path="res://scenes/docked_ship_sprite.tscn" id="5_g43kl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54rav"]
size = Vector2(29, 126)

[node name="BasicIslandLevel1" type="Node2D"]
script = ExtResource("1_jhtna")

[node name="SandTileMap" parent="." instance=ExtResource("1_5ynfr")]
layer_0/tile_data = PackedInt32Array(720896, 0, 0, 786432, 0, 1, 720897, 65536, 0, 786433, 65536, 1, 720898, 0, 0, 786434, 0, 1, 720899, 65536, 0, 786435, 65536, 1, 720900, 0, 0, 786436, 0, 1, 720901, 65536, 0, 786437, 65536, 1, 720902, 0, 0, 786438, 0, 1, 720903, 65536, 0, 786439, 65536, 1, 720904, 0, 0, 786440, 0, 1, 720905, 65536, 0, 786441, 65536, 1, 720906, 0, 0, 786442, 0, 1, 720907, 65536, 0, 786443, 65536, 1, 720908, 0, 0, 786444, 0, 1, 720909, 65536, 0, 786445, 65536, 1, 720910, 0, 0, 786446, 0, 1, 720911, 65536, 0, 786447, 65536, 1, 720912, 0, 0, 786448, 0, 1, 720913, 65536, 0, 786449, 65536, 1, 720914, 0, 0, 786450, 0, 1, 720915, 65536, 0, 786451, 65536, 1, 720916, 0, 0, 786452, 0, 1, 720917, 65536, 0, 786453, 65536, 1, 720918, 0, 0, 786454, 0, 1, 720919, 65536, 0, 786455, 65536, 1, 720920, 0, 0, 786456, 0, 1, 720921, 65536, 0, 786457, 65536, 1, 720922, 0, 0, 786458, 0, 1, 720923, 65536, 0, 786459, 65536, 1, 720924, 0, 0, 786460, 0, 1, 720925, 65536, 0, 786461, 65536, 1, 851996, 0, 0, 917532, 0, 1, 851997, 65536, 0, 917533, 65536, 1, 851994, 0, 0, 917530, 0, 1, 851995, 65536, 0, 917531, 65536, 1, 851992, 0, 0, 917528, 0, 1, 851993, 65536, 0, 917529, 65536, 1, 851990, 0, 0, 917526, 0, 1, 851991, 65536, 0, 917527, 65536, 1, 851988, 0, 0, 917524, 0, 1, 851989, 65536, 0, 917525, 65536, 1, 851986, 0, 0, 917522, 0, 1, 851987, 65536, 0, 917523, 65536, 1, 851984, 0, 0, 917520, 0, 1, 851985, 65536, 0, 917521, 65536, 1, 851982, 0, 0, 917518, 0, 1, 851983, 65536, 0, 917519, 65536, 1, 851980, 0, 0, 917516, 0, 1, 851981, 65536, 0, 917517, 65536, 1, 851978, 0, 0, 917514, 0, 1, 851979, 65536, 0, 917515, 65536, 1, 851976, 0, 0, 917512, 0, 1, 851977, 65536, 0, 917513, 65536, 1, 851974, 0, 0, 917510, 0, 1, 851975, 65536, 0, 917511, 65536, 1, 851972, 0, 0, 917508, 0, 1, 851973, 65536, 0, 917509, 65536, 1, 851970, 0, 0, 917506, 0, 1, 851971, 65536, 0, 917507, 65536, 1, 851968, 0, 0, 917504, 0, 1, 851969, 65536, 0, 917505, 65536, 1, 983040, 0, 0, 1048576, 0, 1, 983041, 65536, 0, 1048577, 65536, 1, 983042, 0, 0, 1048578, 0, 1, 983043, 65536, 0, 1048579, 65536, 1, 983044, 0, 0, 1048580, 0, 1, 983045, 65536, 0, 1048581, 65536, 1, 983046, 0, 0, 1048582, 0, 1, 983047, 65536, 0, 1048583, 65536, 1, 983048, 0, 0, 1048584, 0, 1, 983049, 65536, 0, 1048585, 65536, 1, 983050, 0, 0, 1048586, 0, 1, 983051, 65536, 0, 1048587, 65536, 1, 983052, 0, 0, 1048588, 0, 1, 983053, 65536, 0, 1048589, 65536, 1, 983054, 0, 0, 1048590, 0, 1, 983055, 65536, 0, 1048591, 65536, 1, 983056, 0, 0, 1048592, 0, 1, 983057, 65536, 0, 1048593, 65536, 1, 983058, 0, 0, 1048594, 0, 1, 983059, 65536, 0, 1048595, 65536, 1, 983060, 0, 0, 1048596, 0, 1, 983061, 65536, 0, 1048597, 65536, 1, 983062, 0, 0, 1048598, 0, 1, 983063, 65536, 0, 1048599, 65536, 1, 983064, 0, 0, 1048600, 0, 1, 983065, 65536, 0, 1048601, 65536, 1, 983066, 0, 0, 1048602, 0, 1, 983067, 65536, 0, 1048603, 65536, 1, 983068, 0, 0, 1048604, 0, 1, 983069, 65536, 0, 1048605, 65536, 1, 983070, 0, 0, 1048606, 0, 1, 983071, 65536, 0, 1048607, 65536, 1, 851998, 0, 0, 917534, 0, 1, 851999, 65536, 0, 917535, 65536, 1, 720926, 0, 0, 786462, 0, 1, 720927, 65536, 0, 786463, 65536, 1, 720928, 0, 0, 786464, 0, 1, 720929, 65536, 0, 786465, 65536, 1, 852000, 0, 0, 917536, 0, 1, 852001, 65536, 0, 917537, 65536, 1, 983072, 0, 0, 1048608, 0, 1, 983073, 65536, 0, 1048609, 65536, 1, 983074, 0, 0, 1048610, 0, 1, 983075, 65536, 0, 1048611, 65536, 1, 983076, 0, 0, 1048612, 0, 1, 983077, 65536, 0, 1048613, 65536, 1, 983078, 0, 0, 1048614, 0, 1, 983079, 65536, 0, 1048615, 65536, 1, 983080, 0, 0, 1048616, 0, 1, 983081, 65536, 0, 1048617, 65536, 1, 852008, 0, 0, 917544, 0, 1, 852009, 65536, 0, 917545, 65536, 1, 852010, 0, 0, 917546, 0, 1, 852011, 65536, 0, 917547, 65536, 1, 852012, 0, 0, 917548, 0, 1, 852013, 65536, 0, 917549, 65536, 1, 983084, 0, 0, 1048620, 0, 1, 983085, 65536, 0, 1048621, 65536, 1, 983082, 0, 0, 1048618, 0, 1, 983083, 65536, 0, 1048619, 65536, 1, 852006, 0, 0, 917542, 0, 1, 852007, 65536, 0, 917543, 65536, 1, 852004, 0, 0, 917540, 0, 1, 852005, 65536, 0, 917541, 65536, 1, 852002, 0, 0, 917538, 0, 1, 852003, 65536, 0, 917539, 65536, 1, 720930, 0, 0, 786466, 0, 1, 720931, 65536, 0, 786467, 65536, 1, 720932, 0, 0, 786468, 0, 1, 720933, 65536, 0, 786469, 65536, 1, 720934, 0, 0, 786470, 0, 1, 720935, 65536, 0, 786471, 65536, 1, 720936, 0, 0, 786472, 0, 1, 720937, 65536, 0, 786473, 65536, 1, 720938, 0, 0, 786474, 0, 1, 720939, 65536, 0, 786475, 65536, 1, 720940, 0, 0, 786476, 0, 1, 720941, 65536, 0, 786477, 65536, 1, 1114112, 0, 0, 1179648, 0, 1, 1114113, 65536, 0, 1179649, 65536, 1, 1114114, 0, 0, 1179650, 0, 1, 1114115, 65536, 0, 1179651, 65536, 1, 1114116, 0, 0, 1179652, 0, 1, 1114117, 65536, 0, 1179653, 65536, 1, 1114118, 0, 0, 1179654, 0, 1, 1114119, 65536, 0, 1179655, 65536, 1, 1114120, 0, 0, 1179656, 0, 1, 1114121, 65536, 0, 1179657, 65536, 1, 1114122, 0, 0, 1179658, 0, 1, 1114123, 65536, 0, 1179659, 65536, 1, 1114124, 0, 0, 1179660, 0, 1, 1114125, 65536, 0, 1179661, 65536, 1, 1114126, 0, 0, 1179662, 0, 1, 1114127, 65536, 0, 1179663, 65536, 1, 1114128, 0, 0, 1179664, 0, 1, 1114129, 65536, 0, 1179665, 65536, 1, 1114130, 0, 0, 1179666, 0, 1, 1114131, 65536, 0, 1179667, 65536, 1, 1114132, 0, 0, 1179668, 0, 1, 1114133, 65536, 0, 1179669, 65536, 1, 1114134, 0, 0, 1179670, 0, 1, 1114135, 65536, 0, 1179671, 65536, 1, 1114136, 0, 0, 1179672, 0, 1, 1114137, 65536, 0, 1179673, 65536, 1, 1114138, 0, 0, 1179674, 0, 1, 1114139, 65536, 0, 1179675, 65536, 1, 1114140, 0, 0, 1179676, 0, 1, 1114141, 65536, 0, 1179677, 65536, 1, 1114142, 0, 0, 1179678, 0, 1, 1114143, 65536, 0, 1179679, 65536, 1, 1114144, 0, 0, 1179680, 0, 1, 1114145, 65536, 0, 1179681, 65536, 1, 1114146, 0, 0, 1179682, 0, 1, 1114147, 65536, 0, 1179683, 65536, 1, 1114148, 0, 0, 1179684, 0, 1, 1114149, 65536, 0, 1179685, 65536, 1, 1114150, 0, 0, 1179686, 0, 1, 1114151, 65536, 0, 1179687, 65536, 1, 1114152, 0, 0, 1179688, 0, 1, 1114153, 65536, 0, 1179689, 65536, 1, 1114154, 0, 0, 1179690, 0, 1, 1114155, 65536, 0, 1179691, 65536, 1, 1114156, 0, 0, 1179692, 0, 1, 1114157, 65536, 0, 1179693, 65536, 1)

[node name="CaptainCat" parent="." instance=ExtResource("2_myd00")]
position = Vector2(76, 74)

[node name="TreeSprite" parent="." instance=ExtResource("3_iija3")]
z_index = -1
position = Vector2(137, 112)

[node name="TreeSprite2" parent="." instance=ExtResource("3_iija3")]
z_index = -1
position = Vector2(321, 114)

[node name="TreeSprite3" parent="." instance=ExtResource("3_iija3")]
z_index = -1
position = Vector2(476, 117)

[node name="DockedShipSprite" parent="." instance=ExtResource("5_g43kl")]
z_index = -2
position = Vector2(55, 118)

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(15.5, 114)
shape = SubResource("RectangleShape2D_54rav")

[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
